# interactive-story-game

./: .gitignore  AGENTS.md  Detailed-Feature-Report.md  package-lock.json
.cursor/rules/: project-rules.mdc
backend/: .gitignore  app.py  config.py  database.sqlite  pyproject.toml  tts.py
backend/database/: db_manager.py  init.sql
backend/models/: game_state.py
backend/routes/: game.py  narrate.py  story.py
backend/services/: ai_service.py  deepgram_tts_service.py  image_service.py  personality_service.py  qwen_tts_service.py  tts_service.py
frontend/: index.html  script.js  styles.css
frontend-react/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend-react/src/: index.css  main.tsx
frontend-react/src/api/: client.ts  game.ts
frontend-react/src/lib/: utils.ts
frontend-react/src/modules/app/: App.tsx
frontend-react/src/modules/ui/: CharacterInfoCard.tsx  Choices.tsx  Controls.tsx  Header.tsx  HistoryPanel.tsx  LoadDialog.tsx  NamePrompt.tsx  NarrationPlayer.tsx  PersonalityRevealDialog.tsx  PlayHistory.tsx  SaveDialog.tsx  StoryArea.tsx  Toast.tsx
frontend-react/src/types/: index.ts
